# GPU-Progammierung

./: .gitignore
Unbenannter_Ordner/: CMakeLists.txt
Unbenannter_Ordner/subfolder/: CMakeLists.txt
sheet01_task01_Transformations/: CMakeLists.txt  transformations.cpp
sheet01_task02_Material/: CMakeLists.txt  material.cpp
sheet01_task03_Texture/: CMakeLists.txt  Texture.cpp  bmp.cpp
sheet02_task04_Blending/: BlendvonLin  CMakeLists.txt
sheet02_task05_mirror/: CMakeLists.txt  mirror.cpp
sheet02_task06_VertexBufferObjects/: CMakeLists.txt  VBO_Fractal.cpp
sheet03_task07_PumpingTeapot/: CMakeLists.txt  Pumping(Lin)  PumpingTeapot.cpp  pumping.vert  pumpingVert(Lin)
sheet03_task08_SSAA/: CMakeLists.txt  SSAA.cpp
sheet03_task09_GlowingTeapot/: CMakeLists.txt  GlowingTeapot.cpp  blur.frag  blur_hori.frag  blur_vert.frag
sheet04_task10_UniformBufferObject/: CMakeLists.txt  HairyBunny.cpp  hair.frag  hair.geom
sheet04_task11_HairyBunny/: CMakeLists.txt  hair.frag  hair.geom
sheet04_task12_HairyBunny2/: CMakeLists.txt  HairyBunny.cpp  hair.vert  hair2.geom  simple.frag  simple.vert
sheet05_task13_Tesselation/: CMakeLists.txt  Tessellation.cpp  Tessellation.dom  Tessellation.frag  Tessellation.hull  Tessellation.vert  elephant.cpp
sheet05_task14_Streaklines/: CMakeLists.txt  Streaklines.cpp  advect.frag  advect.geom  advect.vert  amira.cpp
sheet06_task15_Histogram/: CMakeLists.txt  create_histogram.frag  create_histogram.vert  histogram.cpp
sheet06_task16_Voxelization/: CMakeLists.txt  voxelization.cpp  voxelization.frag
sheet07_task17_Multiplikation_und_Addition/: VectorMad.cu
sheet07_task18_Swirl/: Swirl.cu
sheet09_task_21_ClothSimulation/: Cloth.cpp  Cloth.cu  Cloth.h  CudaMath.h  common.h  main.cpp  simple.frag  simple.vert
sheet10_task22_Tiefenunschärfe/: scan_simple.cu
